packages/conf-loader/multi-conf-loader/__tests__/__snapshots__/loader.test.ts.snap
// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`error bad path 1`] = `Object {}`;

exports[`error with bad application 1`] = `
[LoaderConfigParseError: Error during parsing of file "<PROJECT_ROOT>/packages/conf-loader/multi-conf-loader/__tests__/fixture/badapplication/application.yml".
    YAMLException: bad indentation of a mapping entry (5:18)

 2 | projectName: test
 3 | testBDD: &testBDD !config config.testBDD
 4 | logger: &logger !config config.logger
 5 |       application:
----------------------^
 6 |   << : *logger
 7 |   << : *testBDD
    ]
`;

exports[`error with bad constant 1`] = `
[LoaderConfigParseError: Error during parsing of file "<PROJECT_ROOT>/packages/conf-loader/multi-conf-loader/__tests__/fixture/badconstant/constants.yml".
    YAMLException: bad indentation of a mapping entry (12:19)

  9 |     typeorm:
 10 |       connectionOptions:
 11 |       - type: postgres
 12 |               host: *pgHost
------------------------^
 13 |     name: test-default
 14 |           username: test-default
    ]
`;

exports[`must load the good project with profile load test 1`] = `
Object {
  "application": Object {
    "loggerConfig": Object {
      "appenders": Object {
        "out": Object {
          "type": "stdout",
        },
      },
      "categories": Object {
        "default": Object {
          "appenders": Array [
            "out",
          ],
          "level": "debug",
        },
      },
    },
    "profile": "dev",
    "typeorm": Object {
      "connectionOptions": Array [
        Object {
          "database": "test-dev",
          "host": "localhost",
          "name": "test-dev",
          "password": "test-dev",
          "schema": "test-dev",
          "synchronize": false,
          "type": "postgres",
          "username": "test-dev",
        },
      ],
    },
  },
  "logger": Object {
    "loggerConfig": Object {
      "appenders": Object {
        "out": Object {
          "type": "stdout",
        },
      },
      "categories": Object {
        "default": Object {
          "appenders": Array [
            "out",
          ],
          "level": "debug",
        },
      },
    },
  },
  "projectName": "test",
  "testBDD": Object {
    "typeorm": Object {
      "connectionOptions": Array [
        Object {
          "database": "test-dev",
          "host": "localhost",
          "name": "test-dev",
          "password": "test-dev",
          "schema": "test-dev",
          "synchronize": false,
          "type": "postgres",
          "username": "test-dev",
        },
      ],
    },
  },
}
`;

exports[`must load the good project with profile load test2 1`] = `
Object {
  "application": Object {
    "loggerConfig": Object {
      "appenders": Object {
        "out": Object {
          "type": "stdout",
        },
      },
      "categories": Object {
        "default": Object {
          "appenders": Array [
            "out",
          ],
          "level": "debug",
        },
      },
    },
    "profile": "dev",
    "typeorm": Object {
      "connectionOptions": Array [
        Object {
          "database": "test-dev",
          "host": "localhost",
          "name": "test-dev",
          "password": "test-dev",
          "schema": "test-dev",
          "synchronize": false,
          "type": "postgres",
          "username": "test-dev",
        },
      ],
    },
  },
  "logger": Object {
    "loggerConfig": Object {
      "appenders": Object {
        "out": Object {
          "type": "stdout",
        },
      },
      "categories": Object {
        "default": Object {
          "appenders": Array [
            "out",
          ],
          "level": "debug",
        },
      },
    },
  },
  "projectName": "test2",
  "testBDD": Object {
    "typeorm": Object {
      "connectionOptions": Array [
        Object {
          "database": "test-dev",
          "host": "localhost",
          "name": "test-dev",
          "password": "test-dev",
          "schema": "test-dev",
          "synchronize": false,
          "type": "postgres",
          "username": "test-dev",
        },
      ],
    },
  },
}
`;

exports[`must load the good project without profile load test 1`] = `
Object {
  "application": Object {
    "loggerConfig": Object {
      "appenders": Object {
        "out": Object {
          "type": "stdout",
        },
      },
      "categories": Object {
        "default": Object {
          "appenders": Array [
            "out",
          ],
          "level": "debug",
        },
      },
    },
    "typeorm": Object {
      "connectionOptions": Array [
        Object {
          "database": "test-default",
          "host": "localhost",
          "name": "test-default",
          "password": "test-default",
          "schema": "test-default",
          "synchronize": false,
          "type": "postgres",
          "username": "test-default",
        },
      ],
    },
  },
  "logger": Object {
    "loggerConfig": Object {
      "appenders": Object {
        "out": Object {
          "type": "stdout",
        },
      },
      "categories": Object {
        "default": Object {
          "appenders": Array [
            "out",
          ],
          "level": "debug",
        },
      },
    },
  },
  "projectName": "test",
  "testBDD": Object {
    "typeorm": Object {
      "connectionOptions": Array [
        Object {
          "database": "test-default",
          "host": "localhost",
          "name": "test-default",
          "password": "test-default",
          "schema": "test-default",
          "synchronize": false,
          "type": "postgres",
          "username": "test-default",
        },
      ],
    },
  },
}
`;

exports[`must load the good project without profile load test2 1`] = `
Object {
  "application": Object {
    "loggerConfig": Object {
      "appenders": Object {
        "out": Object {
          "type": "stdout",
        },
      },
      "categories": Object {
        "default": Object {
          "appenders": Array [
            "out",
          ],
          "level": "debug",
        },
      },
    },
    "typeorm": Object {
      "connectionOptions": Array [
        Object {
          "database": "test-default",
          "host": "localhost",
          "name": "test-default",
          "password": "test-default",
          "schema": "test-default",
          "synchronize": false,
          "type": "postgres",
          "username": "test-default",
        },
      ],
    },
  },
  "logger": Object {
    "loggerConfig": Object {
      "appenders": Object {
        "out": Object {
          "type": "stdout",
        },
      },
      "categories": Object {
        "default": Object {
          "appenders": Array [
            "out",
          ],
          "level": "debug",
        },
      },
    },
  },
  "projectName": "test2",
  "testBDD": Object {
    "typeorm": Object {
      "connectionOptions": Array [
        Object {
          "database": "test-default",
          "host": "localhost",
          "name": "test-default",
          "password": "test-default",
          "schema": "test-default",
          "synchronize": false,
          "type": "postgres",
          "username": "test-default",
        },
      ],
    },
  },
}
`;
